Fix Projects layout bug. Change project name to portfolio

--- a/pages/projects/Projects.module.sass
+++ b/pages/projects/Projects.module.sass
@@ -13,13 +13,14 @@
 
 .container
   @include container
-  min-height: 100vh
   display: grid
+  grid-template-columns: 1fr
+  min-height: 100vh
   gap: 1rem
+  justify-items: center
   justify-content: center
   align-items: center
   padding-block: 3rem
-  // min-height: 100vh
 
 
 //////////////////////////////////MODIFIERS
@@ -33,4 +34,5 @@
     padding-top: 7rem
   .container
     width: 95%
+    display: grid
     grid-template-columns: 1fr 1fr
